# shopping_ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  spec.md
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py  rate_limit.py
backend/app/api/: cart.py  profile.py  router.py  rules.py  settings.py  shopping.py
backend/app/automation/: amazon_fresh.py  browser.py  browser_semaphore.py  selectors.py
backend/app/middleware/: auth.py
backend/app/models/: cart.py  profile.py  rules.py  settings.py  shopping.py
backend/app/services/: cart_executor.py  cookie_manager.py  planner.py  profile_manager.py  rules_manager.py
backend/app/storage/: database.py  history_repo.py
backend/tests/unit/: test_amazon_fresh.py  test_cart_executor.py  test_cookie_manager.py  test_history_repo.py  test_planner.py  test_profile_manager.py  test_rules_manager.py
config/: rules.yaml.default
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/__tests__/components/: PlanCard.test.tsx
frontend/__tests__/lib/: api.test.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/app/plan/[sessionId]/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/settings/cookies/: page.tsx
frontend/app/settings/profile/: page.tsx
frontend/app/settings/rules/: page.tsx
frontend/app/setup/: page.tsx
frontend/components/shopping/: ExecutionStatus.tsx  PlanCard.tsx  ShoppingInput.tsx
frontend/hooks/: useCartExecution.ts  useProfile.ts  useRules.ts  useShoppingPlan.ts
frontend/lib/: api.ts  types.ts
infra/: container-app.bicep  main.bicep  parameters.json  vnet.bicep
scripts/: setup-hooks.sh
scripts/hooks/: commit-msg  pre-commit
